# kiwi-christmass-weekend

./: api.py  basics.txt  database_handler.py  database_hangler.py  database_startup.py  day_one.txt  models.py  pyproject.toml  scraper.py  second_day.txt
notes/: day_one.txt  second_day.txt
