[tool.poetry]
name = "kiwi-christmas-weekend"
version = "0.1.0"
description = ""
authors = ["Jakub Rutrle <rutrle@seznam.cz>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.26.0"
redis = "^4.0.2"
python-slugify = "^5.0.2"
fastapi = "^0.70.0"
uvicorn = {extras = ["standard"], version = "^0.16.0"}

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
